
	* include/mcs/ID.h: Add Belief related stuff.

	* include/mcs/Belief.h:	Change to store kind and text.
	* include/mcs/BeliefTable.h: Likewise.

	* include/mcs/Belief.h: New file.

	* include/mcs/BeliefTable.h: Likewise.
	* include/mcs/Table.h: Likewise.
	* include/mcs/Logger.h: Likewise.
	* testsuite/testTables.cpp: Likewise.
	* src/mcs/ID.cpp: Likewise.
	* src/mcs/Logger.cpp: Likewise.

2011-12-07  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/solver/Makefile.am: Remove comments that cause
	compiler errors.

	* include/mcs/Atoms.h: New file.
	* include/mcs/ID.h: Likewise.
	* include/mcs/Printhelpers.h: Likewise.

2011-12-06  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/solver/BaseSolverState.h: New file.
	* include/solver/InputMessage.h: Likewise.
	* include/solver/OutputMessage.h: Likewise.
	* include/solver/Makefile.am: Add new header files.

2011-11-29  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* testsuite/testWeakPointer.cpp: New file.
	* testsuite/Family.h: Likewise.
	* testsuite/Parent.h: Likewise.
	* testsuite/Parent.cpp: Likewise.
	* testsuite/Child.h: Likewise.
	* testsuite/Child.cpp: Likewise.
	* testsuite/Makefile.am: Add testWeakPointer.

2011-11-28  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/dmcs/Engine.h: New file.
	* include/dmcs/Instantiator.h: Likewise.
	* include/dmcs/Evaluator.h: Likewise.

2011-09-27  Peter Schueller  <ps@kr.tuwien.ac.at>

	* src/process/ProcessBuf.cpp: Added safe_close() and safe_open()
	to wrap close() and open() and manage syscall interruptions.
	(This shall fix problems with too fast clasp exiting.)

2011-09-23  Minh Dao-Tran  <dao@kr.tuwien.ac.at>
	* testsuite/Makefile.am: Add testPool.
	* testsuite/testPool.cpp: New file.

	* include/mcs/Pool.h: New file.
	(Pool): use pointer arithmetic.
	(dmcs): use void*.

	* src/mcs/Pool.cpp: Likewise.

2011-09-22  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/Makefile.am (SUBDIRS): Remove duplicate mcs.

2011-09-08  Minh Dao-Tran  <dao@kr.tuwien.ac.at>
